neptune/src/neptune/NeptuneParser.java
// $ANTLR 3.5.2 Neptune.g 2014-05-30 22:59:34

package neptune;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class NeptuneParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ARRAY_SET", "BECOMES", "BOOLEAN", 
		"CHAR", "CHAR_LITERAL", "COLON", "COMMA", "COMMENT", "CONST", "DIGIT", 
		"DIVIDE", "DO", "DQUOTE", "DROPIN_STATEMENT", "ELSE", "ELSIF", "EQ", "FALSE", 
		"FOREACH", "FUNCTION", "GT", "GT_EQ", "IDENTIFIER", "IF", "IN", "INTEGER", 
		"LBRACKET", "LCURLY", "LETTER", "LOWER", "LPAREN", "LT", "LT_EQ", "MINUS", 
		"NEQ", "NUMBER", "PLUS", "PRINT", "PROGRAM", "QUOTE", "RBRACKET", "RCURLY", 
		"READ", "RETURN", "RPAREN", "SEMICOLON", "STRING_LITERAL", "THEN", "TIMES", 
		"TRUE", "UPPER", "VAR", "WHILE", "WS"
	};
	public static final int EOF=-1;
	public static final int ARRAY_SET=4;
	public static final int BECOMES=5;
	public static final int BOOLEAN=6;
	public static final int CHAR=7;
	public static final int CHAR_LITERAL=8;
	public static final int COLON=9;
	public static final int COMMA=10;
	public static final int COMMENT=11;
	public static final int CONST=12;
	public static final int DIGIT=13;
	public static final int DIVIDE=14;
	public static final int DO=15;
	public static final int DQUOTE=16;
	public static final int DROPIN_STATEMENT=17;
	public static final int ELSE=18;
	public static final int ELSIF=19;
	public static final int EQ=20;
	public static final int FALSE=21;
	public static final int FOREACH=22;
	public static final int FUNCTION=23;
	public static final int GT=24;
	public static final int GT_EQ=25;
	public static final int IDENTIFIER=26;
	public static final int IF=27;
	public static final int IN=28;
	public static final int INTEGER=29;
	public static final int LBRACKET=30;
	public static final int LCURLY=31;
	public static final int LETTER=32;
	public static final int LOWER=33;
	public static final int LPAREN=34;
	public static final int LT=35;
	public static final int LT_EQ=36;
	public static final int MINUS=37;
	public static final int NEQ=38;
	public static final int NUMBER=39;
	public static final int PLUS=40;
	public static final int PRINT=41;
	public static final int PROGRAM=42;
	public static final int QUOTE=43;
	public static final int RBRACKET=44;
	public static final int RCURLY=45;
	public static final int READ=46;
	public static final int RETURN=47;
	public static final int RPAREN=48;
	public static final int SEMICOLON=49;
	public static final int STRING_LITERAL=50;
	public static final int THEN=51;
	public static final int TIMES=52;
	public static final int TRUE=53;
	public static final int UPPER=54;
	public static final int VAR=55;
	public static final int WHILE=56;
	public static final int WS=57;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public NeptuneParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public NeptuneParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}
	@Override public String[] getTokenNames() { return NeptuneParser.tokenNames; }
	@Override public String getGrammarFileName() { return "Neptune.g"; }


	public static class program_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "program"
	// Neptune.g:114:1: program : lines EOF -> ^( PROGRAM lines ) ;
	public final NeptuneParser.program_return program() throws RecognitionException {
		NeptuneParser.program_return retval = new NeptuneParser.program_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token EOF2=null;
		ParserRuleReturnScope lines1 =null;

		Object EOF2_tree=null;
		RewriteRuleTokenStream stream_EOF=new RewriteRuleTokenStream(adaptor,"token EOF");
		RewriteRuleSubtreeStream stream_lines=new RewriteRuleSubtreeStream(adaptor,"rule lines");

		try {
			// Neptune.g:115:5: ( lines EOF -> ^( PROGRAM lines ) )
			// Neptune.g:115:9: lines EOF
			{
			pushFollow(FOLLOW_lines_in_program1009);
			lines1=lines();
			state._fsp--;

			stream_lines.add(lines1.getTree());
			EOF2=(Token)match(input,EOF,FOLLOW_EOF_in_program1011);  
			stream_EOF.add(EOF2);

			// AST REWRITE
			// elements: lines
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 116:13: -> ^( PROGRAM lines )
			{
				// Neptune.g:116:17: ^( PROGRAM lines )
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(PROGRAM, "PROGRAM"), root_1);
				adaptor.addChild(root_1, stream_lines.nextTree());
				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "program"


	public static class lines_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "lines"
	// Neptune.g:119:1: lines : ( line )+ ;
	public final NeptuneParser.lines_return lines() throws RecognitionException {
		NeptuneParser.lines_return retval = new NeptuneParser.lines_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope line3 =null;


		try {
			// Neptune.g:120:2: ( ( line )+ )
			// Neptune.g:120:4: ( line )+
			{
			root_0 = (Object)adaptor.nil();


			// Neptune.g:120:4: ( line )+
			int cnt1=0;
			loop1:
			while (true) {
				int alt1=2;
				int LA1_0 = input.LA(1);
				if ( ((LA1_0 >= BOOLEAN && LA1_0 <= CHAR_LITERAL)||LA1_0==CONST||(LA1_0 >= FALSE && LA1_0 <= FOREACH)||(LA1_0 >= IDENTIFIER && LA1_0 <= IF)||LA1_0==INTEGER||LA1_0==LCURLY||LA1_0==LPAREN||LA1_0==NUMBER||LA1_0==PRINT||LA1_0==READ||LA1_0==STRING_LITERAL||LA1_0==TRUE||LA1_0==WHILE) ) {
					alt1=1;
				}

				switch (alt1) {
				case 1 :
					// Neptune.g:120:4: line
					{
					pushFollow(FOLLOW_line_in_lines1046);
					line3=line();
					state._fsp--;

					adaptor.addChild(root_0, line3.getTree());

					}
					break;

				default :
					if ( cnt1 >= 1 ) break loop1;
					EarlyExitException eee = new EarlyExitException(1, input);
					throw eee;
				}
				cnt1++;
			}

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "lines"


	public static class line_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "line"
	// Neptune.g:123:1: line : ( expression SEMICOLON !| declaration SEMICOLON !| logic_statement );
	public final NeptuneParser.line_return line() throws RecognitionException {
		NeptuneParser.line_return retval = new NeptuneParser.line_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token SEMICOLON5=null;
		Token SEMICOLON7=null;
		ParserRuleReturnScope expression4 =null;
		ParserRuleReturnScope declaration6 =null;
		ParserRuleReturnScope logic_statement8 =null;

		Object SEMICOLON5_tree=null;
		Object SEMICOLON7_tree=null;

		try {
			// Neptune.g:124:2: ( expression SEMICOLON !| declaration SEMICOLON !| logic_statement )
			int alt2=3;
			switch ( input.LA(1) ) {
			case CHAR_LITERAL:
			case FALSE:
			case IDENTIFIER:
			case LCURLY:
			case LPAREN:
			case NUMBER:
			case PRINT:
			case READ:
			case STRING_LITERAL:
			case TRUE:
				{
				alt2=1;
				}
				break;
			case BOOLEAN:
			case CHAR:
			case CONST:
			case INTEGER:
				{
				alt2=2;
				}
				break;
			case FOREACH:
			case IF:
			case WHILE:
				{
				alt2=3;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 2, 0, input);
				throw nvae;
			}
			switch (alt2) {
				case 1 :
					// Neptune.g:124:4: expression SEMICOLON !
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_expression_in_line1059);
					expression4=expression();
					state._fsp--;

					adaptor.addChild(root_0, expression4.getTree());

					SEMICOLON5=(Token)match(input,SEMICOLON,FOLLOW_SEMICOLON_in_line1061); 
					}
					break;
				case 2 :
					// Neptune.g:125:4: declaration SEMICOLON !
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_declaration_in_line1067);
					declaration6=declaration();
					state._fsp--;

					adaptor.addChild(root_0, declaration6.getTree());

					SEMICOLON7=(Token)match(input,SEMICOLON,FOLLOW_SEMICOLON_in_line1069); 
					}
					break;
				case 3 :
					// Neptune.g:126:4: logic_statement
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_logic_statement_in_line1075);
					logic_statement8=logic_statement();
					state._fsp--;

					adaptor.addChild(root_0, logic_statement8.getTree());

					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "line"


	public static class logic_statement_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "logic_statement"
	// Neptune.g:129:1: logic_statement : ( while_statement | foreach_statement | if_statement );
	public final NeptuneParser.logic_statement_return logic_statement() throws RecognitionException {
		NeptuneParser.logic_statement_return retval = new NeptuneParser.logic_statement_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope while_statement9 =null;
		ParserRuleReturnScope foreach_statement10 =null;
		ParserRuleReturnScope if_statement11 =null;


		try {
			// Neptune.g:130:2: ( while_statement | foreach_statement | if_statement )
			int alt3=3;
			switch ( input.LA(1) ) {
			case WHILE:
				{
				alt3=1;
				}
				break;
			case FOREACH:
				{
				alt3=2;
				}
				break;
			case IF:
				{
				alt3=3;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 3, 0, input);
				throw nvae;
			}
			switch (alt3) {
				case 1 :
					// Neptune.g:130:4: while_statement
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_while_statement_in_logic_statement1087);
					while_statement9=while_statement();
					state._fsp--;

					adaptor.addChild(root_0, while_statement9.getTree());

					}
					break;
				case 2 :
					// Neptune.g:131:4: foreach_statement
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_foreach_statement_in_logic_statement1092);
					foreach_statement10=foreach_statement();
					state._fsp--;

					adaptor.addChild(root_0, foreach_statement10.getTree());

					}
					break;
				case 3 :
					// Neptune.g:132:4: if_statement
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_if_statement_in_logic_statement1097);
					if_statement11=if_statement();
					state._fsp--;

					adaptor.addChild(root_0, if_statement11.getTree());

					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "logic_statement"


	public static class while_statement_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "while_statement"
	// Neptune.g:135:1: while_statement : WHILE ^ LPAREN ! expression RPAREN ! LCURLY ! lines RCURLY !;
	public final NeptuneParser.while_statement_return while_statement() throws RecognitionException {
		NeptuneParser.while_statement_return retval = new NeptuneParser.while_statement_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token WHILE12=null;
		Token LPAREN13=null;
		Token RPAREN15=null;
		Token LCURLY16=null;
		Token RCURLY18=null;
		ParserRuleReturnScope expression14 =null;
		ParserRuleReturnScope lines17 =null;

		Object WHILE12_tree=null;
		Object LPAREN13_tree=null;
		Object RPAREN15_tree=null;
		Object LCURLY16_tree=null;
		Object RCURLY18_tree=null;

		try {
			// Neptune.g:136:2: ( WHILE ^ LPAREN ! expression RPAREN ! LCURLY ! lines RCURLY !)
			// Neptune.g:136:4: WHILE ^ LPAREN ! expression RPAREN ! LCURLY ! lines RCURLY !
			{
			root_0 = (Object)adaptor.nil();


			WHILE12=(Token)match(input,WHILE,FOLLOW_WHILE_in_while_statement1109); 
			WHILE12_tree = (Object)adaptor.create(WHILE12);
			root_0 = (Object)adaptor.becomeRoot(WHILE12_tree, root_0);

			LPAREN13=(Token)match(input,LPAREN,FOLLOW_LPAREN_in_while_statement1112); 
			pushFollow(FOLLOW_expression_in_while_statement1115);
			expression14=expression();
			state._fsp--;

			adaptor.addChild(root_0, expression14.getTree());

			RPAREN15=(Token)match(input,RPAREN,FOLLOW_RPAREN_in_while_statement1117); 
			LCURLY16=(Token)match(input,LCURLY,FOLLOW_LCURLY_in_while_statement1120); 
			pushFollow(FOLLOW_lines_in_while_statement1123);
			lines17=lines();
			state._fsp--;

			adaptor.addChild(root_0, lines17.getTree());

			RCURLY18=(Token)match(input,RCURLY,FOLLOW_RCURLY_in_while_statement1125); 
			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "while_statement"


	public static class foreach_statement_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "foreach_statement"
	// Neptune.g:139:1: foreach_statement : FOREACH ^ LPAREN ! IDENTIFIER IN ! IDENTIFIER RPAREN ! LCURLY ! lines RCURLY !;
	public final NeptuneParser.foreach_statement_return foreach_statement() throws RecognitionException {
		NeptuneParser.foreach_statement_return retval = new NeptuneParser.foreach_statement_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token FOREACH19=null;
		Token LPAREN20=null;
		Token IDENTIFIER21=null;
		Token IN22=null;
		Token IDENTIFIER23=null;
		Token RPAREN24=null;
		Token LCURLY25=null;
		Token RCURLY27=null;
		ParserRuleReturnScope lines26 =null;

		Object FOREACH19_tree=null;
		Object LPAREN20_tree=null;
		Object IDENTIFIER21_tree=null;
		Object IN22_tree=null;
		Object IDENTIFIER23_tree=null;
		Object RPAREN24_tree=null;
		Object LCURLY25_tree=null;
		Object RCURLY27_tree=null;

		try {
			// Neptune.g:140:2: ( FOREACH ^ LPAREN ! IDENTIFIER IN ! IDENTIFIER RPAREN ! LCURLY ! lines RCURLY !)
			// Neptune.g:140:4: FOREACH ^ LPAREN ! IDENTIFIER IN ! IDENTIFIER RPAREN ! LCURLY ! lines RCURLY !
			{
			root_0 = (Object)adaptor.nil();


			FOREACH19=(Token)match(input,FOREACH,FOLLOW_FOREACH_in_foreach_statement1138); 
			FOREACH19_tree = (Object)adaptor.create(FOREACH19);
			root_0 = (Object)adaptor.becomeRoot(FOREACH19_tree, root_0);

			LPAREN20=(Token)match(input,LPAREN,FOLLOW_LPAREN_in_foreach_statement1141); 
			IDENTIFIER21=(Token)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_foreach_statement1144); 
			IDENTIFIER21_tree = (Object)adaptor.create(IDENTIFIER21);
			adaptor.addChild(root_0, IDENTIFIER21_tree);

			IN22=(Token)match(input,IN,FOLLOW_IN_in_foreach_statement1146); 
			IDENTIFIER23=(Token)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_foreach_statement1149); 
			IDENTIFIER23_tree = (Object)adaptor.create(IDENTIFIER23);
			adaptor.addChild(root_0, IDENTIFIER23_tree);

			RPAREN24=(Token)match(input,RPAREN,FOLLOW_RPAREN_in_foreach_statement1151); 
			LCURLY25=(Token)match(input,LCURLY,FOLLOW_LCURLY_in_foreach_statement1154); 
			pushFollow(FOLLOW_lines_in_foreach_statement1157);
			lines26=lines();
			state._fsp--;

			adaptor.addChild(root_0, lines26.getTree());

			RCURLY27=(Token)match(input,RCURLY,FOLLOW_RCURLY_in_foreach_statement1159); 
			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "foreach_statement"


	public static class if_statement_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "if_statement"
	// Neptune.g:143:1: if_statement : IF ^ LPAREN ! expression RPAREN ! LCURLY ! lines RCURLY ! ( ELSIF LPAREN ! expression RPAREN ! LCURLY ! lines RCURLY !)* ( ELSE LCURLY ! lines RCURLY !)? ;
	public final NeptuneParser.if_statement_return if_statement() throws RecognitionException {
		NeptuneParser.if_statement_return retval = new NeptuneParser.if_statement_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token IF28=null;
		Token LPAREN29=null;
		Token RPAREN31=null;
		Token LCURLY32=null;
		Token RCURLY34=null;
		Token ELSIF35=null;
		Token LPAREN36=null;
		Token RPAREN38=null;
		Token LCURLY39=null;
		Token RCURLY41=null;
		Token ELSE42=null;
		Token LCURLY43=null;
		Token RCURLY45=null;
		ParserRuleReturnScope expression30 =null;
		ParserRuleReturnScope lines33 =null;
		ParserRuleReturnScope expression37 =null;
		ParserRuleReturnScope lines40 =null;
		ParserRuleReturnScope lines44 =null;

		Object IF28_tree=null;
		Object LPAREN29_tree=null;
		Object RPAREN31_tree=null;
		Object LCURLY32_tree=null;
		Object RCURLY34_tree=null;
		Object ELSIF35_tree=null;
		Object LPAREN36_tree=null;
		Object RPAREN38_tree=null;
		Object LCURLY39_tree=null;
		Object RCURLY41_tree=null;
		Object ELSE42_tree=null;
		Object LCURLY43_tree=null;
		Object RCURLY45_tree=null;

		try {
			// Neptune.g:144:2: ( IF ^ LPAREN ! expression RPAREN ! LCURLY ! lines RCURLY ! ( ELSIF LPAREN ! expression RPAREN ! LCURLY ! lines RCURLY !)* ( ELSE LCURLY ! lines RCURLY !)? )
			// Neptune.g:144:4: IF ^ LPAREN ! expression RPAREN ! LCURLY ! lines RCURLY ! ( ELSIF LPAREN ! expression RPAREN ! LCURLY ! lines RCURLY !)* ( ELSE LCURLY ! lines RCURLY !)?
			{
			root_0 = (Object)adaptor.nil();


			IF28=(Token)match(input,IF,FOLLOW_IF_in_if_statement1172); 
			IF28_tree = (Object)adaptor.create(IF28);
			root_0 = (Object)adaptor.becomeRoot(IF28_tree, root_0);

			LPAREN29=(Token)match(input,LPAREN,FOLLOW_LPAREN_in_if_statement1175); 
			pushFollow(FOLLOW_expression_in_if_statement1178);
			expression30=expression();
			state._fsp--;

			adaptor.addChild(root_0, expression30.getTree());

			RPAREN31=(Token)match(input,RPAREN,FOLLOW_RPAREN_in_if_statement1180); 
			LCURLY32=(Token)match(input,LCURLY,FOLLOW_LCURLY_in_if_statement1183); 
			pushFollow(FOLLOW_lines_in_if_statement1186);
			lines33=lines();
			state._fsp--;

			adaptor.addChild(root_0, lines33.getTree());

			RCURLY34=(Token)match(input,RCURLY,FOLLOW_RCURLY_in_if_statement1188); 
			// Neptune.g:145:3: ( ELSIF LPAREN ! expression RPAREN ! LCURLY ! lines RCURLY !)*
			loop4:
			while (true) {
				int alt4=2;
				int LA4_0 = input.LA(1);
				if ( (LA4_0==ELSIF) ) {
					alt4=1;
				}

				switch (alt4) {
				case 1 :
					// Neptune.g:145:4: ELSIF LPAREN ! expression RPAREN ! LCURLY ! lines RCURLY !
					{
					ELSIF35=(Token)match(input,ELSIF,FOLLOW_ELSIF_in_if_statement1194); 
					ELSIF35_tree = (Object)adaptor.create(ELSIF35);
					adaptor.addChild(root_0, ELSIF35_tree);

					LPAREN36=(Token)match(input,LPAREN,FOLLOW_LPAREN_in_if_statement1196); 
					pushFollow(FOLLOW_expression_in_if_statement1199);
					expression37=expression();
					state._fsp--;

					adaptor.addChild(root_0, expression37.getTree());

					RPAREN38=(Token)match(input,RPAREN,FOLLOW_RPAREN_in_if_statement1201); 
					LCURLY39=(Token)match(input,LCURLY,FOLLOW_LCURLY_in_if_statement1204); 
					pushFollow(FOLLOW_lines_in_if_statement1207);
					lines40=lines();
					state._fsp--;

					adaptor.addChild(root_0, lines40.getTree());

					RCURLY41=(Token)match(input,RCURLY,FOLLOW_RCURLY_in_if_statement1209); 
					}
					break;

				default :
					break loop4;
				}
			}

			// Neptune.g:146:3: ( ELSE LCURLY ! lines RCURLY !)?
			int alt5=2;
			int LA5_0 = input.LA(1);
			if ( (LA5_0==ELSE) ) {
				alt5=1;
			}
			switch (alt5) {
				case 1 :
					// Neptune.g:146:4: ELSE LCURLY ! lines RCURLY !
					{
					ELSE42=(Token)match(input,ELSE,FOLLOW_ELSE_in_if_statement1217); 
					ELSE42_tree = (Object)adaptor.create(ELSE42);
					adaptor.addChild(root_0, ELSE42_tree);

					LCURLY43=(Token)match(input,LCURLY,FOLLOW_LCURLY_in_if_statement1219); 
					pushFollow(FOLLOW_lines_in_if_statement1222);
					lines44=lines();
					state._fsp--;

					adaptor.addChild(root_0, lines44.getTree());

					RCURLY45=(Token)match(input,RCURLY,FOLLOW_RCURLY_in_if_statement1224); 
					}
					break;

			}

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "if_statement"


	public static class print_statement_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "print_statement"
	// Neptune.g:149:1: print_statement : PRINT ^ LPAREN ! expression ( COMMA expression )* RPAREN !;
	public final NeptuneParser.print_statement_return print_statement() throws RecognitionException {
		NeptuneParser.print_statement_return retval = new NeptuneParser.print_statement_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token PRINT46=null;
		Token LPAREN47=null;
		Token COMMA49=null;
		Token RPAREN51=null;
		ParserRuleReturnScope expression48 =null;
		ParserRuleReturnScope expression50 =null;

		Object PRINT46_tree=null;
		Object LPAREN47_tree=null;
		Object COMMA49_tree=null;
		Object RPAREN51_tree=null;

		try {
			// Neptune.g:150:2: ( PRINT ^ LPAREN ! expression ( COMMA expression )* RPAREN !)
			// Neptune.g:150:4: PRINT ^ LPAREN ! expression ( COMMA expression )* RPAREN !
			{
			root_0 = (Object)adaptor.nil();


			PRINT46=(Token)match(input,PRINT,FOLLOW_PRINT_in_print_statement1239); 
			PRINT46_tree = (Object)adaptor.create(PRINT46);
			root_0 = (Object)adaptor.becomeRoot(PRINT46_tree, root_0);

			LPAREN47=(Token)match(input,LPAREN,FOLLOW_LPAREN_in_print_statement1242); 
			pushFollow(FOLLOW_expression_in_print_statement1245);
			expression48=expression();
			state._fsp--;

			adaptor.addChild(root_0, expression48.getTree());

			// Neptune.g:150:30: ( COMMA expression )*
			loop6:
			while (true) {
				int alt6=2;
				int LA6_0 = input.LA(1);
				if ( (LA6_0==COMMA) ) {
					alt6=1;
				}

				switch (alt6) {
				case 1 :
					// Neptune.g:150:31: COMMA expression
					{
					COMMA49=(Token)match(input,COMMA,FOLLOW_COMMA_in_print_statement1248); 
					COMMA49_tree = (Object)adaptor.create(COMMA49);
					adaptor.addChild(root_0, COMMA49_tree);

					pushFollow(FOLLOW_expression_in_print_statement1250);
					expression50=expression();
					state._fsp--;

					adaptor.addChild(root_0, expression50.getTree());

					}
					break;

				default :
					break loop6;
				}
			}

			RPAREN51=(Token)match(input,RPAREN,FOLLOW_RPAREN_in_print_statement1254); 
			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
